<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mybackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="115dp"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/daybackground_clickedtab"
            android:gravity="center"
            android:text="Für Gps Suche Standort anklicken"
            android:textColor="#fff"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#efefef"
            android:paddingTop="12dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/btn_toIngSchool"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/meallistitembackground"
                    android:gravity="center_horizontal"
                    android:onClick="onButtonClick"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewWilli"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:src="@drawable/gpswilli" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/txt_Adress_WilliAllee"
                        android:textColor="#222"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_toHoPla"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/meallistitembackground"
                    android:onClick="onButtonClick"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewHopla"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:src="@drawable/gpshopla" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/txt_Adress_HoPla"
                        android:textColor="#222"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_toAVZ"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/meallistitembackground"
                    android:onClick="onButtonClick"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewAVZ"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:src="@drawable/gpsavz" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/txt_Adress_AVZ"
                        android:textColor="#222"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/mImageView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#fafa00" />

    <TextView
        android:id="@+id/mTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>